# blob-goes-3d

./: Cargo.toml  Dockerfile  README.md  build.rs  wip-gba-3d.gba
docs/: creating_levels.md  level_spec.md
levels/: 00.json  01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json
scripts/: bundle_levels.py  generate_camera_angle_lut.py  generate_sin_lut.py
src/: camera.rs  effects.rs  entities.rs  fixed.rs  input.rs  levels.rs  main.rs  math.rs  mathlut.rs  moveutils.rs  player.rs  render.rs  save.rs  utils.rs
src/audio/: mod.rs
src/camera/: lut.rs  mod.rs
src/entities/: body.rs  bounce.rs  boundingrect.rs  boundingshapes.rs  crumbling.rs  cube.rs  empty.rs  entity.rs  finish.rs  ice.rs  mod.rs  mover.rs  rectangle.rs  switch.rs  utils.rs  wireframe.rs
src/levels/: levelstore.rs  mod.rs
src/menu/: levelselection.rs  mod.rs
src/renderer/: draw.rs  hw.rs  mod.rs  polygon.rs  render.rs  utils.rs
src/textengine/: chartoindex.rs  draw.rs  letters.rs  mod.rs
